--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div>hello this is my repo </div>
 <p>i am author</p>
-<p>THis is my new feature of repository.</p>
+<p>THis is my new feature of repository. (button)</p>
